--- a/readthedocsext/theme/templates/builds/includes/status_icon.html
+++ b/readthedocsext/theme/templates/builds/includes/status_icon.html
@@ -80,7 +80,7 @@
   {% elif build.is_stale %}
     fa-solid fa-stop
   {% else %}
-    loading fa-duotone fa-spinner-third
+    loading fa-solid fa-spinner-third
   {% endif %}
 
   {# And explicit classes #}
