--- a/readthedocsext/theme/templates/projects/import_form.html
+++ b/readthedocsext/theme/templates/projects/import_form.html
@@ -67,21 +67,22 @@
 
       {% if has_connected_accounts %}
         {# Search prompt and dropdown #}
+        <label>
+          {% trans "Repository name:" %}
+        </label>
         <div class="ui fluid disabled loading search" data-bind="semanticui: {search: search_config()}, css: {disabled: is_loading(), loading: is_loading()}">
-          <div class="ui fluid icon large action input">
-            <input class="ui text" type="text" placeholder="{% trans "Search repositories" %}">
-            <button
-                class="ui right icon button"
-                data-bind="click: sync_remote_repos, css: {disabled: is_syncing(), loading: is_syncing()}"
-                data-content="{% trans "Refresh repositories" %}">
-              <i class="fa-duotone fa-refresh icon"></i>
-            </button>
+          <div class="ui fluid icon large input">
+            <input
+                class="ui text"
+                type="text"
+                autofocus=true />
+            <i class="fa-duotone fa-search icon"></i>
           </div>
           <div class="results"></div>
 
           {% comment %}
             This is the template used by Knockout to render the SUI search
-            template. The output format is similar, but there is additional
+            template. The output format is similar, but there are additional
             conditional blocks for display purposes. The `standard` search
             template only uses image, title, and description.
 
@@ -123,53 +124,82 @@
         </div>
         {# End of search prompt and dropdown #}
 
-        <div class="ui placeholder segment" data-bind="visible: !is_selected()">
-
-          {% if not has_connected_accounts %}
-            <div class="ui icon info message">
-              <i class="fa-duotone fa-magic icon"></i>
-              <div class="content">
-                <p>
-                  {# Translators: "connected service" refers to the user setting page for "Connected Services" #}
-                  {% blocktrans trimmed %}
-                    To enable automatic configuration of repositories, you must first
-                    add a connected service to your account.
-                  {% endblocktrans %}
-                </p>
-                <button class="ui right floated button" href="{{ url_connected_services }}">
-                  {% trans "Add a connected service" %}
-                </button>
+        <div class="ui basic horizontally fitted segment" data-bind="visible: !is_selected()">
+          <div class="ui top attached placeholder segment">
+            {% if not has_connected_accounts %}
+              <div class="ui icon info message">
+                <i class="fa-duotone fa-magic icon"></i>
+                <div class="content">
+                  <p>
+                    {# Translators: "connected service" refers to the user setting page for "Connected Services" #}
+                    {% blocktrans trimmed %}
+                      To enable automatic configuration of repositories, you must first
+                      add a connected service to your account.
+                    {% endblocktrans %}
+                  </p>
+                  <button class="ui right floated button" href="{{ url_connected_services }}">
+                    {% trans "Add a connected service" %}
+                  </button>
+                </div>
               </div>
-            </div>
-          {% endif %}
+            {% endif %}
 
-          <div class="ui icon header">
-            {% trans "Configure a repository" %}
-
-            <div class="sub header">
+            <div class="ui icon header">
               {% if not has_connected_accounts %}
                 {# User does not yet have any connected accounts, don't ask to "select repository" #}
-                {# Translators: "connected service" refers to the user setting page for "Connected Services" #}
-                {% blocktrans trimmed with url=url_connected_services %}
-                  To enable automatic configuration of repositories, you must first
-                  <a href="{{ url }}">add a connected service to your account</a>.
-                  If you do not have an account to connect, you may still be able
-                  to manually configure repositories.
-                {% endblocktrans %}
+                {% trans "Connect an account" %}
+
+                <div class="sub header">
+                  {# Translators: "connected service" refers to the user setting page for "Connected Services" #}
+                  {% blocktrans trimmed with url=url_connected_services %}
+                    To enable automatic configuration of repositories, you must first
+                    <a href="{{ url }}">add a connected service to your account</a>.
+                    If you do not have an account to connect, you may still be able
+                    to manually configure repositories.
+                  {% endblocktrans %}
+                </div>
               {% else %}
-                {# User has connected accounts, don't point to connecting GitHub/etc #}
-                {% blocktrans trimmed %}
-                  If you do not see the repository you would like to configure, you
-                  can try refreshing the list of repositories, or you might be able
-                  to add a new project by manually configure your repository.
-                {% endblocktrans %}
+                {# Push user towards searching using input above #}
+                <i class="fad fa-search icon"></i>
+                {% trans "Select a repository" %}
+
+                <div class="sub header">
+                  {# User has connected accounts, don't point to connecting GitHub/etc #}
+                  {% blocktrans trimmed %}
+                    Use the search above to find the repository you would like to
+                    use to build your new project. This project will be connected to
+                    the repository through your connected account.
+                  {% endblocktrans %}
+                </div>
               {% endif %}
             </div>
+
+          </div>
+          <div class="ui small bottom attached center aligned message">
+
+            {% trans "Can't find the repository you are searching for?" %}
+
+            <button
+                class="ui mini black basic compact right aligned button" 
+                data-bind="click: sync_remote_repos, css: {disabled: is_syncing(), loading: is_syncing()}">
+              <i class="fa-duotone fa-refresh icon"></i>
+              {% trans "Refresh your repositories" %}
+            </button>
+
           </div>
         </div>
         {# End placeholder segment when no repository is selected #}
 
-        {# Card display for selected remote repository #}
+        {% comment %}
+          Card display for selected remote repository
+          ===========================================
+
+          This block only shows when there is a selected project from the
+          search selction above. This block shows some information about using
+          the repository, such as where the repository has already been
+          connected and why the repository can/cannot be used.
+          
+        {% endcomment %}
         <div class="ui fluid card" data-bind="visible: is_selected, with: selected" style="display: none;">
           <div class="content">
             <img class="ui right floated mini rounded image" data-bind="attr: { src: avatar_url }">
@@ -242,12 +272,13 @@
                           {% endblocktrans %}
                         </p>
                         <p class="ui red text" data-bind="visible: !admin">
-                          <a class="ui red mini basic button">{% trans "Read more" %}</a>
+                          <a class="ui red mini basic button" href="https://docs.readthedocs.io/page/intro/import-guide.html#manually-import-your-docs">
+                            {% trans "Learn how to manually configure this repository" %}
+                          </a>
                         </p>
                       </div>
                     </div>
                   </div>
-
 
                   {# Is the repository already imported? #}
                   <div class="item" data-bind="if: has_project">
@@ -258,20 +289,30 @@
                       </div>
                       <div class="description">
                         <p>
-                        {% blocktrans trimmed %}
-                          This repository can was previously configured for
-                          another project already. Configuring this repository
-                          again will not affect existing projects.
-                        {% endblocktrans %}
+                          {% blocktrans trimmed %}
+                            This following projects were already configured to use this repository:
+                          {% endblocktrans %}
                         </p>
-                        <p data-bind="foreach: matches">
-                          <i class="fa-duotone fa-arrow-up-right-from-square icon"></i>
-                          <a data-bind="text: id, attr: {href: url}" target="_blank"></a>
-                        </p>
+                        <div data-bind="foreach: matches">
+                          {% comment %}
+                            This is currently using the v2 API because the v3
+                            API doesn't support searching. Once the API v3
+                            supports searching, this can be switched to using
+                            the project chip template include. This will
+                            include the project name, avatar URL, and embedded
+                            popup for the project.
+
+                            We only have two fields here for now: url and id (slug)
+                          {% endcomment %}
+                          <a class="ui basic image label" data-bind="attr: {href: url}" target="_blank">
+                            {# TODO switch this to use the full response from the v3 API #}
+                            {# <img src="{{ project.remote_repository.avatar_url }}" /> #}
+                            <span data-bind="text: id"></span>
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
-
 
                 </div>
               </div>
@@ -288,7 +329,7 @@
                 <input type="hidden" name="project_url" data-bind="value: html_url" />
                 <input type="hidden" name="remote_repository" data-bind="value: id" />
 
-                <button class="ui primary button">
+                <button class="ui primary button" data-bind="css: {disabled: !admin}">
                   {% trans "Set up" %}
                 </button>
               </form>
@@ -305,22 +346,21 @@
       <div class="ui tab" data-tab="manual">
         <div class="ui warning message">
           {% blocktrans trimmed %}
-            Extra steps well be required to complete repository setup.
+            Extra steps will be required to complete repository setup.
           {% endblocktrans %}
         </div>
         <p>
           {% blocktrans trimmed %}
             We recommend you only attempt manual configuration if you are
             familiar with configuring your repository and have the necessary
-            admin privileges to configure the repository. Manual configuration
+            admin privileges to configure this repository. Manual configuration
             will require several steps after your project is created in order
-            to automatically build your project on changes to the repository.
+            to automatically build your project.
           {% endblocktrans %}
         </p>
         <div class="ui right aligned basic segment">
-          <a class="ui basic button" href="https://docs.readthedocs.io/en/stable/intro/import-guide.html" target="_blank">
-            <i class="fa-duotone fa-question icon"></i>
-            {% trans "Read more" %}
+          <a class="ui basic button" href="https://docs.readthedocs.io/page/intro/import-guide.html" target="_blank">
+            {% trans "Learn more" %}
           </a>
           <a class="ui button" href="{% url 'projects_import_manual' %}">
             <i class="fa-solid fa-triangle-exclamation icon"></i>
