--- a/readthedocsext/theme/templates/includes/elements/chips/project.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/project.html
@@ -14,21 +14,11 @@
 {% endblock chip_classes %}
 
 {% block chip_icon %}
-  {% if project.remote_repository %}
-    <img src="{{ project.remote_repository.avatar_url }}" />
-  {% else %}
-    {% comment %}
-      For now, this is using Dicebear, which has a few random generators for
-      user/project icons. We don't need to use Dicebear, but could use this or
-      similar to generate files on disk and use an md5 hash or similar to link
-      to the same image always.
-    {% endcomment %}
-    <img src="https://api.dicebear.com/5.x/shapes/svg?size=64&backgroundColor=b8abd4&shape1Color=8c74c1&shape2Color=7854c5&shape3Color=f0f0ff&seed={{ project.pk }}" />
-  {% endif %}
+  <img src="{% url 'theme_avatar_project' project.slug %}" />
 {% endblock chip_icon %}
-    
+
 {% block chip_text %}
-  {{ project.name }} 
+  {{ project.name }}
 {% endblock chip_text %}
 
 {% block chip_detail_text %}
@@ -39,21 +29,11 @@
 {% endblock popupcard_image %}
 
 {% block popupcard_header %}
-  {{ project.name }} 
+  {{ project.name }}
 {% endblock popupcard_header %}
 
 {% block popupcard_right %}
-  {% if project.remote_repository %}
-    <img class="ui mini right floated rounded image" src="{{ project.remote_repository.avatar_url }}" />
-  {% else %}
-    {% comment %}
-      For now, this is using Dicebear, which has a few random generators for
-      user/project icons. We don't need to use Dicebear, but could use this or
-      similar to generate files on disk and use an md5 hash or similar to link
-      to the same image always.
-    {% endcomment %}
-    <img class="ui mini right floated rounded image" src="https://api.dicebear.com/5.x/shapes/svg?size=64&backgroundColor=b8abd4&shape1Color=8c74c1&shape2Color=7854c5&shape3Color=f0f0ff&seed={{ project.pk }}" />
-  {% endif %}
+  <img class="ui mini right floated rounded image" src="{% url 'theme_avatar_project' project.slug %}" />
 {% endblock popupcard_right %}
 
 {% block popupcard_meta %}
@@ -63,7 +43,7 @@
 
 {% block popupcard_content %}
   <div class="ui small list">
-    
+
     <div class="item">
       <i class="fad fa-code-fork icon"></i>
       <div class="content">
