Notification about beta release
Show a small notification to users so they know they can expect some bugs or
things that are not working perfectly. Telling them to report these back to us.

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -49,6 +49,12 @@
 
     {% block content-wrapper %}
       <div class="ui very padded container">
+
+        {# Temporal notification while we are in Beta #}
+        <div class="ui message info">
+            This dashboard is currently in Beta. Please report any feedback you may have.
+        </div>
+
         {% block messages %}
           {% include "includes/utils/messages.html" %}
         {% endblock messages %}
