Unify project creation columns and layout
Avoid switching layouts multiple times, always use the same two columns.
This is more predictable for the user and for us.

--- a/readthedocsext/theme/templates/projects/import_base.html
+++ b/readthedocsext/theme/templates/projects/import_base.html
@@ -3,70 +3,92 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% trans "Add Project" %}{% endblock %}
+{% block title %}{% trans "Add project" %}{% endblock %}
 
 {% block content %}
-  {% block project_add_content %}
-    <div class="ui very padded centered stackable grid">
-      <div class="ui ten wide tablet six wide computer column">
+  {% block project_add_grid %}
+    <div class="ui very padded centered stackable grid" {% block project_add_data_bind %}{% endblock %}>
 
-        {% block project_add_content_header %}
+      {% block project_add_header %}
+        <div class="ui five wide computer four wide large screen computer only column">
+          {# Placeholder for column offset #}
+        </div>
+        <div class="ui sixteen wide tablet eleven wide computer ten wide large screen column">
           <h1 class="ui medium header">
             <div class="content">
               {% trans "Add project" %}
               <div class="sub header">
-                {% block project_add_content_subheader %}
-                {% endblock project_add_content_subheader %}
+                {% block project_add_subheader %}
+                {% endblock project_add_subheader %}
               </div>
             </div>
           </h1>
-        {% endblock project_add_content_header %}
+        </div>
+      {% endblock project_add_header %}
 
-        <form class="ui form" action="{% url "projects_import_manual" %}" method="post">
+      {% block project_add_sidebar %}
+        <div class="ui sixteen wide tablet five wide computer four wide large screen column">
+          <div class="ui one column grid">
+            {% block project_add_sidebar_content %}
+            {% endblock project_add_sidebar_content %}
 
-          {% csrf_token %}
-          {{ wizard.management_form }}
+            {% block project_add_sidebar_help %}
+              {# This hides the help on small view ports. It could be something better like and accordian #}
+              <div class="computer only column">
+                <h2 class="ui small header">{% trans "Help topics" %}</h2>
+                <div class="ui list">
+                  {% block project_add_sidebar_help_topics %}
+                    {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/intro/import-guide.html" text="Connecting a repository" is_external=True class="item" %}
+                    {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/tutorial/index.html" text="Read the Docs tutorial" is_external=True class="item" %}
+                    {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/examples.html" text="Example projects" is_external=True class="item" %}
+                  {% endblock project_add_sidebar_help_topics %}
+                </div>
+              </div>
+            {% endblock project_add_sidebar_help %}
+          </div>
+        </div>
+      {% endblock project_add_sidebar %}
 
-          {% block wizard_form %}
-            {% if wizard.form.forms %}
-              {{ wizard.form.management_form }}
-              {% for form in wizard.form.forms %}
-                {% csrf_token %}
-                {{ form|crispy }}
-              {% endfor %}
-            {% else %}
-              {{ wizard.form|crispy }}
-            {% endif %}
-          {% endblock wizard_form %}
+      {% block project_add_content %}
+        <div class="ui sixteen wide tablet eleven wide computer ten wide large screen column">
+          {% block project_add_content_form %}
+            <form class="ui form" action="{% url "projects_import_manual" %}" method="post">
 
-          {% block wizard_actions %}
-            <div>
-              {% if wizard.steps.prev %}
-                <button class="ui button" name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">
-                  {% trans "Previous" %}
-                </button>
-              {% endif %}
+              {% block wizard_form %}
+                {% if wizard.form.forms %}
+                  {{ wizard.form.management_form }}
+                  {% for form in wizard.form.forms %}
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                  {% endfor %}
+                {% else %}
+                  {{ wizard.form|crispy }}
+                {% endif %}
+              {% endblock wizard_form %}
+              
+              {% csrf_token %}
+              {{ wizard.management_form }}
 
-              {% if wizard.steps.next %}
-                <input class="ui button primary" type="submit" value="{% trans "Next" %}" />
-              {% else %}
-                <input class="ui button primary" type="submit" value="{% trans "Finish" %}" />
-              {% endif %}
-            </div>
-          {% endblock wizard_actions %}
+              {% block wizard_actions %}
+                <div>
+                  {% if wizard.steps.prev %}
+                    <button class="ui button" name="wizard_goto_step" value="{{ wizard.steps.prev }}">
+                      {% trans "Previous" %}
+                    </button>
+                  {% endif %}
 
-        </form>
+                  {% if wizard.steps.next %}
+                    <input class="ui button primary" type="submit" value="{% trans "Next" %}" />
+                  {% else %}
+                    <input class="ui button primary" type="submit" value="{% trans "Finish" %}" />
+                  {% endif %}
+                </div>
+              {% endblock wizard_actions %}
+
+            </form>
+          {% endblock project_add_content_form %}
+        </div>
       {% endblock project_add_content %}
     </div>
-
-    <div class="ui ten wide tablet four wide computer column">
-      <h2 class="ui small header">{% trans "Help topics" %}</h2>
-      <div data-bind="using: EmbedTopicsView('intro/import-guide')">
-        <div data-bind="template: { name: 'doc-topics' }"></div>
-      </div>
-    </div>
-  </div>
-
-  {% include "includes/utils/embed_docs.html" %}
-
+  {% endblock project_add_grid %}
 {% endblock %}
