--- a/readthedocsext/theme/templates/projects/import_basics.html
+++ b/readthedocsext/theme/templates/projects/import_basics.html
@@ -2,6 +2,6 @@
 
 {% load i18n %}
 
-{% block project_add_content_subheader %}
+{% block project_add_subheader %}
   {% trans "Configure basic project settings" %}
-{% endblock project_add_content_subheader %}
+{% endblock project_add_subheader %}
