--- a/readthedocsext/theme/templates/projects/import_extra.html
+++ b/readthedocsext/theme/templates/projects/import_extra.html
@@ -4,6 +4,6 @@
 {% load crispy_forms_tags %}
 {% load ext_theme_tags %}
 
-{% block project_add_content_subheader %}
+{% block project_add_subheader %}
   {% trans "Configure advanced project settings" %}
-{% endblock project_add_content_subheader %}
+{% endblock project_add_subheader %}
