--- a/readthedocsext/theme/templates/projects/import_form.html
+++ b/readthedocsext/theme/templates/projects/import_form.html
@@ -175,7 +175,7 @@
         ===========================================
 
         This block only shows when there is a selected project from the
-        search selction above. This block shows some information about using
+        search selection above. This block shows some information about using
         the repository, such as where the repository has already been
         connected and why the repository can/cannot be used.
         
@@ -270,7 +270,7 @@
                     <div class="description">
                       <p>
                         {% blocktrans trimmed %}
-                          This following projects were already configured to use this repository:
+                          These following projects were already configured to use this repository:
                         {% endblocktrans %}
                       </p>
                       <div data-bind="foreach: matches">
