--- a/readthedocsext/theme/templates/includes/elements/chips/version.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/version.html
@@ -5,7 +5,7 @@
 {% block chip_view_params %}'{% url "projects-versions-detail" version.project.slug version.slug %}'{% endblock %}
 
 {% block chip_url %}
-  {{ version.get_absolute_url }}
+  {% url "projects_detail" version.project.slug %}?version={{ version.slug }}
 {% endblock %}
 
 {% block chip_icon %}
@@ -58,7 +58,21 @@
 
 {% block popupcard_content %}
   <div class="ui list">
-   
+
+    <div class="item">
+      <i class="fa-duotone fa-box icon"></i>
+      <div class="content">
+        <div class="header">{% trans "Builds" %}</div>
+        <div class="description">
+          <a class="item" href="{% url "builds_project_list" version.project.slug %}?version={{ version.slug }}">
+            {% blocktrans trimmed with version_name=version.verbose_name %}
+              For version {{ version_name }}
+            {% endblocktrans %}
+          </a>
+        </div>
+      </div>
+    </div>
+
     <div class="item">
       <i class="fa-duotone {{ version.is_external|yesno:'fa-code-pull-request,fa-code-branch' }} icon"></i>
       <div class="content">
@@ -85,17 +99,18 @@
 {% endblock popupcard_content %}
 
 {% block popupcard_extra %}
-  <span>
-    
-  </span>
+  {# Placeholder for the left #}
+  <span></span>
 
   <div class="right floated">
     <span>
-      Active
+      {# Translators: this is a checkbox that describes whether the Version instance as enabled for building #}
+      {% trans "Active" %}
       <i class="fas {{ version.active|yesno:'fa-check,red fa-xmark' }} icon"></i>
     </span>
     <span>
-      Built
+      {# Translators: this is a checkbox that describes whether the Version instance as successfully built #}
+      {% trans "Built" %}
       <i class="fas {{ version.built|yesno:'fa-check,red fa-xmark' }} icon"></i>
     </span>
   </div>
