--- a/readthedocsext/theme/templates/includes/elements/chips/version.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/version.html
@@ -119,12 +119,12 @@
 
   <div class="right floated">
     <span>
-      {# Translators: this is a checkbox that describes whether the Version instance as enabled for building #}
+      {# Translators: this is a checkbox that describes whether the Version instance is enabled for building #}
       {% trans "Active" %}
       <i class="fas {{ version.active|yesno:'fa-check,red fa-xmark' }} icon"></i>
     </span>
     <span>
-      {# Translators: this is a checkbox that describes whether the Version instance as successfully built #}
+      {# Translators: this is a checkbox that describes whether the Version instance is successfully built #}
       {% trans "Built" %}
       <i class="fas {{ version.built|yesno:'fa-check,red fa-xmark' }} icon"></i>
     </span>
