Add organization listing view, start commercial beta templates WIP

--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -66,6 +66,11 @@ active_item
                   {% trans "Projects" %}
                 </a>
               {% endif %}
+              {% if USE_ORGANIZATIONS %}
+                <a class="{% if active_item == "organizations" %}active {% endif %} computer only item" href="{% url 'organization_list' %}">
+                  {% trans "Organizations" %}
+                </a>
+              {% endif %}
             {% endblock header_left_menu %}
 
             <div class="right menu">
