Add Pull Request builds page to settings
This is a basic form for now,
but we can spruce it up before it goes live.

--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -25,6 +25,9 @@
         <a class="item {% block project_users_active %}{% endblock %}" href="{% url "projects_users" project.slug %}">
           {% trans "Maintainers" %}
         </a>
+        <a class="item {% block project_pull_requests_active %}{% endblock %}" href="{% url "projects_pull_requests" project.slug %}">
+          {% trans "Pull request builds" %}
+        </a>
         <a class="item {% block project_translations_active %}{% endblock %}" href="{% url "projects_translations" project.slug %}">
           {% trans "Translations" %}
         </a>
